// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Cards) CardTitle mounts with basic props 1`] = `
<CardTitle__Wrapper>
  <div>
    <WithTheme(Title__TitleStyle)
      large={true}
    />
    <WithTheme(Subtitle__SubtitleStyle) />
  </div>
</CardTitle__Wrapper>
`;

exports[`(Cards) CardTitle mounts with children 1`] = `
<CardTitle__Wrapper>
  Hellow!
</CardTitle__Wrapper>
`;

exports[`(Cards) CardTitle mounts with title and subTitle 1`] = `
<CardTitle__Wrapper>
  <div>
    <WithTheme(Title__TitleStyle)
      large={true}
    >
      woop
    </WithTheme(Title__TitleStyle)>
    <WithTheme(Subtitle__SubtitleStyle)>
      woop!
    </WithTheme(Subtitle__SubtitleStyle)>
  </div>
</CardTitle__Wrapper>
`;
